# django-personal-site

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  backup.db  docker-compose.yml  manage.py  poe.min.css  pyproject.toml  requirements.txt  tailwind.config.js
.devcontainer/: deployment.py  devcontainer.json
.github/workflows/: python-app.yml
HomePageApp/: apps.py  views.py
HomePageApp/migrations/: 0001_initial.py  0002_auto_20180219_0821.py  0003_auto_20180220_0445.py  0004_auto_20180220_0449.py  0005_auto_20180220_0451.py  0006_auto_20180220_0546.py
UnityAsteroidsClone/: apps.py  views.py
VertigoProject/: forms.py  settings.py  urls.py  views.py  viewsets.py  wsgi.py
apps/glycemic/: apps.py  models.py  tasks.py
config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
discordbot/: README.md  SteamStats.py  __main__.py  admin.py  apps.py  bot.py  config.py  forms.py  logger.ini  managers.py  models.py  schemas.py  serializers.py  supervisor.conf  tasks.py  tests.py  urls.py  views.py
docker/: Caddyfile  Dockerfile
homesite/: settings.py  urls.py  wsgi.py
mail/: admin.py  apps.py  models.py  signals.py
main/: adapters.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py  viewsets.py
poe/: README.md  admin.py  apps.py  config.py  context_processors.py  exceptions.py  filters.py  forms.py  models.py  routers.py  schema.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py
poe/utils/: api.py  (+4 more)
poeladder/: README.md  admin.py  apps.py  context_processors.py  experience_table.py  filters.py  forms.py  models.py  routers.py  serializers.py  tasks.py  test2.py  tests.py  urls.py  views.py  viewsets.py
static/: header.css  main.css
templates/: base.html  bootstrap4.html  current_date.html  footer.html  header.html  home.html  ow.html  paginator.html  profile.html
unitygames/: apps.py  urls.py  views.py
webgames/: apps.py  urls.py
wowstats/: admin.py  apps.py  choices.py  forms.py  models.py  oauth2.py  tests.py  urls.py  views.py
(+314 files in other folders)
