[project]
name = "homesite"
version = "1.0.0"
description = "Personal website and Discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.10.11",
    "celery==5.3.1",
    "discord-py==2.4.0",
    "django==4.2.18",
    "django-allauth==0.54.0",
    "django-celery-beat==2.5.0",
    "django-dbbackup==4.0.2",
    "django-debug-toolbar==3.2.4",
    "django-filter==23.2",
    "django-redis==5.3.0",
    "djangorestframework==3.15.2",
    "gunicorn==23.0.0",
    "httpx==0.27.0",
    "humanize==4.9.0",
    "markovify==0.9.4",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.0",
    "python-magic==0.4.27",
    "redis>=7.1.0",
    "requests==2.32.3",
    "requests-ratelimiter==0.4.0",
    "sentry-sdk>=1.28.1",
    "wikipedia==1.4.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]

[tool.ruff.format]
quote-style = "preserve"