[project]
name = "homesite"
version = "1.0.0"
description = "Personal website and Discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",
    "celery==5.5.3",
    "discord-py==2.6.4",
    "django==5.2.9",
    "django-allauth>=65",
    "django-celery-beat>=2.5.0",
    "django-dbbackup==4.0.2",
    "django-filter==25.2",
    "django-redis==6.0.0",
    "djangorestframework==3.15.2",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "humanize==4.9.0",
    "markovify==0.9.4",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.0.0",
    "python-magic==0.4.27",
    "redis>=7.1.0",
    "requests==2.32.4",
    "requests-ratelimiter==0.4.0",
    "sentry-sdk>=1.28.1",
    "wikipedia==1.4.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "ipdb>=0.13.13",
    "ipykernel>=7.1.0",
]

[tool.ruff.format]
quote-style = "preserve"
